# monorepo

./: .dockerignore  .env.example  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  Caddyfile.dev  PERFORMANCE_OPTIMIZATIONS.md  README.md  README.ru.md  README_Nx.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.ts  index.html  nx.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  turbo.json  vite.config.js  vite.config.ts
apps/api/: .gitignore  Dockerfile  README.md  main.py  package.json  pyproject.toml  requirements.txt
apps/api-go/: .env.example  .gitignore  go.mod  go.sum  main.go  package.json
apps/backend/: .gitignore  Dockerfile  main.py  package.json  pyproject.toml  requirements.txt
apps/backend_go/: go.mod  go.sum  main.go  package.json
apps/caddy/: Caddyfile  (+2 more)
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: config.py  database.py
backend/app/dao/: base.py  overlays.py  users.py
backend/app/database/: redis.py
backend/app/middlewares/: permormance.py
backend/app/migrations/: env.py
backend/app/models/: overlays.py  users.py
backend/app/routers/: __init__.py  auth.py  overlays.py  streamers.py  users.py  utils.py
backend/app/schemas/: overlays.py  streamers.py  twitch.py  users.py
backend/app/utils/: auth.py  twitch_client.py
frontend/: .env.example  .prettierrc.json  Dockerfile  eslint.config.ts  index.html  package.json  tsconfig.app.json  vite.config.ts
old/: index.html
redesign/: README.md  components.json  eslint.config.ts  index.html  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  i18n.ts  main.ts
valory/: index.html  package.json  vite.config.ts
(+839 files in other folders)
